# ksnandroid

./: CMakeLists.txt  main.c
audio/: audio.c  audio.h
emulator/: emulator.c  emulator.h
include/: common.h
ui/: ui.c  ui.h
utils/: file_utils.c  file_utils.h
video/: video.c  video.h
